@startuml Social App ERD

' Định nghĩa style
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define FK(x) <color:red><b>x</b></color>
!define PK(x) <color:blue><b>x</b></color>

' Định nghĩa màu sắc
skinparam class {
    BackgroundColor #ECECEC
    ArrowColor #2688d4
    BorderColor #2688d4
}

' Bảng users
Table(users, "users") {
    PK(uid): string
    email: string
    fullName: string
    gender: string
    birthDay: timestamp
    phoneNumber: string
    address: string
    profileImage: string
    decs: string
    lastSeen: timestamp
    createdAt: timestamp
    isOnline: boolean
    isPrivateAccount: boolean
    followersCount: integer
    token: string
}

' Bảng posts
Table(posts, "posts") {
    PK(postId): string
    FK(userId): string
    content: string
    fileUrls: string[]
    thumbnailUrl: string
    postType: string
    createdAt: timestamp
    updatedAt: timestamp
    likeCount: integer
    commentCount: integer
}

' Bảng comments
Table(comments, "comments") {
    PK(commentId): string
    FK(postId): string
    FK(userId): string
    FK(parentId): string
    content: string
    createdAt: timestamp
    likeCount: integer
}

' Bảng likes
Table(likes, "likes") {
    PK(likeId): string
    FK(contentId): string
    contentType: string
    FK(userId): string
    createdAt: timestamp
}

' Bảng friendships
Table(friendships, "friendships") {
    PK(friendshipId): string
    FK(senderId): string
    FK(receiverId): string
    isAccepted: boolean
    createdAt: timestamp
}

' Bảng follows
Table(follows, "follows") {
    PK(followId): string
    FK(followerId): string
    FK(followedId): string
    createdAt: timestamp
}

' Bảng chats
Table(chats, "chats") {
    PK(id): string
    name: string
    avatar: string
    isGroup: boolean
    isPublic: boolean
    members: string[]
    admins: string[]
    lastMessageId: string
    lastMessage: string
    lastMessageType: string
    lastMessageSenderId: string
    updatedAt: timestamp
    FK(createdBy): string
    createdAt: timestamp
}

' Bảng messages
Table(messages, "messages") {
    PK(id): string
    FK(chatId): string
    FK(senderId): string
    senderName: string
    senderAvatar: string
    content: string
    type: string
    mediaUrl: string
    seenBy: string[]
    createdAt: timestamp
}

' Bảng notifications
Table(notifications, "notifications") {
    PK(id): string
    FK(senderId): string
    FK(receiverId): string
    content: string
    type: string
    FK(postId): string
    FK(commentId): string
    FK(chatId): string
    isRead: boolean
    createdAt: timestamp
    senderName: string
    senderAvatar: string
}

' Mối quan hệ
users "1" -- "n" posts : creates >
users "1" -- "n" comments : writes >
users "1" -- "n" likes : gives >
posts "1" -- "n" comments : has >
posts "1" -- "n" likes : receives >
comments "1" -- "n" likes : receives >
comments "0..1" -- "n" comments : parent-child >
users "1" -- "n" friendships : sends >
users "1" -- "n" friendships : receives >
users "1" -- "n" follows : follows >
users "1" -- "n" follows : followed by >
users "1" -- "n" chats : participates >
users "1" -- "n" messages : sends >
chats "1" -- "n" messages : contains >
users "1" -- "n" notifications : sends >
users "1" -- "n" notifications : receives >

@enduml 